--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage" : "https://DriesVanHool.github.io/eurder-frontend",
+  "homepage" : "https://driesvanhool.github.io/eurder-frontend/",
   "name": "eurder-frontend",
   "version": "0.1.0",
   "private": true,
